--- a/JamesWebApp/appsettings.json
+++ b/JamesWebApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-JamesWebApp-6044dcb4-042a-4146-8fe3-3e28e7758cbb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-JamesWebApp-6044dcb4-042a-4146-8fe3-3e28e7758cbb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RandomContext": "Server=(localdb)\\mssqllocaldb;Database=JamesWebApp.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
